# EdgarMartinezSerranoTFG

./: README.md
Code Solutions/: .gitignore
Code Solutions/JetsonNano/: CMakeLists.txt  parameters.json
Code Solutions/JetsonNano/src/: main.cc
Code Solutions/JetsonNanoWindowsTesting/: WindowsSolution.sln
Code Solutions/JetsonNanoWindowsTesting/JetsonNano/: JetsonNano.vcxproj  JetsonNano.vcxproj.filters  parameters.json
Code Solutions/PointCloudLibraryICP/: PointCloudLibraryICP.sln
Code Solutions/PointCloudLibraryICP/src/Testing/: Testing.vcxproj  main.cpp
Code Solutions/RealSenseCapture/: RealSenseCapture.sln
Code Solutions/RealSenseCapture/src/CapturePLY/: CapturePLY.vcxproj  main.cpp
Latex/src/: TFG-TFM_EPS_UA.tex
Latex/src/anexos/: acronimos.tex  calibracion.tex  entorno-experimental.tex  estructura-proyecto.tex
Latex/src/bibliografia/: bibliografia.bib
Latex/src/capitulos/: 1-introduccion.tex  2-base-teorica.tex  3-intel-realsense-depth-camera-d435.tex  4-propuesta-de-solucion.tex  5-solucion-del-proyecto-en-jetson-nano.tex  6-experimentacion.tex  7-conclusion.tex  preambulo.tex  preliminaresconagradecimientos.tex
Latex/src/include/: configuracioninicial.tex
